[project]
name = "gamdist"
version = "0.2.0"
description = "Generalized Additive Models fit via ADMM"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Bob Wilson" },
]
maintainers = [
    { name = "Bob Wilson" },
]
requires-python = ">=3.11"
keywords = ["statistics", "gam", "regression", "admm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "cvxpy>=1.4",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.8",
    "ruff>=0.5",
    "pandas-stubs",
]

[project.urls]
Source = "https://github.com/rwilson4/gamdist"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamdist"]

[tool.hatch.build.targets.sdist]
include = [
    "gamdist",
    "tests",
    "README.md",
    "changelog.txt",
    "license.txt",
    "CLAUDE.md",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["gamdist"]
plugins = []
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "cvxpy",
    "cvxpy.*",
    "matplotlib",
    "matplotlib.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:cvxpy.*",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:cvxpy.*",
]

[tool.coverage.run]
source = ["gamdist"]
branch = true
omit = [
    "gamdist/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
